# src/api_docs/swagger.json
@@ -128,6 +128,60 @@
                         "description": "Invalid Body Parameters"
                     }
                 }
+            },
+            "put/{categoryId}": {
+                "tags": ["Category"],
+                "summary": "Update Category",
+                "description": "",
+                "consumes": ["application/json"],
+                "produces": ["application/json"],
+                "security": [
+                    { 
+                        "Bearer": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Category details",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Category"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Invalid Body Parameters"
+                    },
+                    "404": {
+                        "description": "Identifier not found."
+                    }
+                }
+            },
+            "delete/{categoryId}": {
+                "tags": ["Category"],
+                "summary": "Delete Category",
+                "description": "",
+                "consumes": ["application/json"],
+                "produces": ["application/json"],
+                "security": [
+                    { 
+                        "Bearer": []
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Identifier not found."
+                    }
+                }
             }
         }
     },
